この変更は保存されるんかな？

--- a/ML13.ipynb
+++ b/ML13.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ecbd785f",
+   "id": "c2a27641",
    "metadata": {},
    "outputs": [
     {
@@ -37,8 +37,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "10f09440",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c6b2be8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "9f27130a",
+   "id": "3f7d5e31",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4994fb53",
+   "id": "6735d3ca",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aafe4e5d",
+   "id": "a5008274",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "24fe7090",
+   "id": "67833adf",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ec86195a",
+   "id": "990bb7d0",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9f0ba670",
+   "id": "10ef2329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b2aac633",
+   "id": "c25b46c9",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f46500aa",
+   "id": "c198cd36",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4d713721",
+   "id": "1b59dcf9",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9759093d",
+   "id": "5c9d22e4",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d12b7e9f",
+   "id": "d92add57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2cb349da",
+   "id": "8705f521",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "09bce382",
+   "id": "2bffc666",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f9559815",
+   "id": "d3c9c440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c521af67",
+   "id": "b58826ae",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6c299e5e",
+   "id": "6f215a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9df5679b",
+   "id": "8c0d4a6b",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d331174a",
+   "id": "3b716105",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "45f9b416",
+   "id": "ca36211f",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e6eae5fa",
+   "id": "adb80238",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "dbb9a266",
+   "id": "bbf331dd",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "173af335",
+   "id": "cc9bcc43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b346c752",
+   "id": "96c7b633",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "810878fd",
+   "id": "7567e144",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "363d9329",
+   "id": "7e85e9dc",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5d5fd3a5",
+   "id": "1b9d03aa",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c547d97d",
+   "id": "8ab3fd40",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "56a0825a",
+   "id": "cc871854",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5eb87539",
+   "id": "c02e1569",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "feb6b0b2",
+   "id": "1c48dc96",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "826bd976",
+   "id": "2f0a2046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "10746f5b",
+   "id": "02afa90b",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "83b56e81",
+   "id": "461143cc",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ad1f369a",
+   "id": "9bc9fe3e",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "85756570",
+   "id": "34070887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0eb739ff",
+   "id": "a1c52ccc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0604b368",
+   "id": "32f5b12d",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3c412605",
+   "id": "52cf3840",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d6fb0254",
+   "id": "30c4a7a0",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "44bb1080",
+   "id": "33c20dd4",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "612f9702",
+   "id": "e0250f5d",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "71ac0a0d",
+   "id": "4d669e05",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "417c47e4",
+   "id": "4f17dc10",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "09c04a95",
+   "id": "8fc69cb9",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "fb7351b5",
+   "id": "c0fa9af5",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "31448951",
+   "id": "97177efb",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "db9f1e39",
+   "id": "f09c87cc",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "52615aaa",
+   "id": "b6898215",
    "metadata": {
     "scrolled": true
    },
@@ -1041,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7f1f771c",
+   "id": "4c3771a0",
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ff41aa82",
+   "id": "04ecc6ed",
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8aa61b36",
+   "id": "6fa6eaef",
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f61e81dd",
+   "id": "5748c06e",
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d1b2ffdc",
+   "id": "9297c12b",
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "52056fc8",
+   "id": "14075859",
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "af5e2ddb",
+   "id": "2909a3f4",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "31a4afa0",
+   "id": "06001664",
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "bd754814",
+   "id": "a9970343",
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "4885cb8d",
+   "id": "cbd0203b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "be716e94",
+   "id": "20e05ce8",
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "10be4693",
+   "id": "8f5e2a77",
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "4c264def",
+   "id": "a22e04d9",
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "edba387f",
+   "id": "a6579da5",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "305c1ee5",
+   "id": "93cd9e87",
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "a8b8cb18",
+   "id": "55461ce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "00a5e680",
+   "id": "1587c573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "a8d7fff1",
+   "id": "b5a19766",
    "metadata": {
     "scrolled": true
    },
@@ -1697,8 +1713,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "id": "09265eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss_fn(y_true, y_pred):\n",
+    "    return tf.reduce_mean(tf.square(y_true - y_pred))\n",
+    "\n",
+    "def train(model, inputs, outputs, learning_rate):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        current_loss = loss_fn(model(inputs), outputs)\n",
+    "    dw, db = tape.gradient(current_loss, [model.w, model.b])\n",
+    "    model.w.assign_sub(learning_rate * dw)\n",
+    "    model.b.assign_sub(learning_rate * db)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "672c7dda",
+   "id": "292481cd",
    "metadata": {},
    "outputs": [],
    "source": []
