LDAもt-SNEもめっちゃ忘れてる

--- a/ml_dict/Untitled.ipynb
+++ b/ml_dict/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2554b40b",
+   "id": "769bc865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "020bcead",
+   "id": "e87f462e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "71d38d4f",
+   "id": "ba130c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4b3be6e8",
+   "id": "0ac4ca2c",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f54ad4b5",
+   "id": "db795112",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "075f8317",
+   "id": "93a73362",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2fa35c61",
+   "id": "3d9abf22",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a3f614ff",
+   "id": "8553d1fe",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "48e8b1cf",
+   "id": "07371618",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0f6c780e",
+   "id": "51a25142",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ed782705",
+   "id": "d971eeeb",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "83026980",
+   "id": "c9601330",
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +431,287 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5a8f8537",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.31412713 0.        ]\n",
+      " [0.60652579 1.07858589]\n",
+      " [0.68603873 0.93829691]\n",
+      " [0.90045939 0.64030301]\n",
+      " [1.18684534 0.23798004]\n",
+      " [1.43072395 0.11515326]\n",
+      " [0.60643245 0.963657  ]\n",
+      " [1.40498934 0.50203248]\n",
+      " [0.48911695 1.07336504]\n",
+      " [1.53368717 0.04560054]\n",
+      " [0.91457524 0.86713795]\n",
+      " [0.57831586 1.09345157]\n",
+      " [0.40278459 1.07636191]\n",
+      " [1.35959524 0.19058562]\n",
+      " [0.57156269 0.94377938]\n",
+      " [1.46336764 0.31658907]\n",
+      " [1.36631877 0.22995819]\n",
+      " [1.35314127 0.00682365]\n",
+      " [0.94058577 0.69851391]\n",
+      " [0.7929195  0.66609388]\n",
+      " [0.72591967 0.97477131]\n",
+      " [0.73667548 0.92730986]\n",
+      " [1.0898819  0.71219134]\n",
+      " [0.59741349 0.98790637]\n",
+      " [0.60285656 1.03465384]\n",
+      " [0.89693383 0.55181692]\n",
+      " [1.25375047 0.18715173]\n",
+      " [1.23881674 0.19521675]\n",
+      " [0.52578928 0.93098275]\n",
+      " [1.02671193 0.72257241]\n",
+      " [0.81156187 0.97748896]\n",
+      " [0.57694031 1.00446856]\n",
+      " [0.83548917 0.72981639]\n",
+      " [1.34649729 0.1295702 ]\n",
+      " [0.75307873 0.87294641]\n",
+      " [1.26176944 0.05567896]\n",
+      " [0.75058422 0.9093709 ]\n",
+      " [0.51828091 0.98837279]\n",
+      " [0.41407701 1.0867446 ]\n",
+      " [1.31508523 0.26911916]\n",
+      " [0.77341633 0.96574429]\n",
+      " [1.34862721 0.3541922 ]\n",
+      " [1.16099726 0.30621353]\n",
+      " [0.927639   0.80132508]\n",
+      " [1.32492226 0.30985661]\n",
+      " [0.69770478 0.70770105]\n",
+      " [0.89996027 0.65901163]\n",
+      " [1.38387262 0.36771608]\n",
+      " [0.62210507 1.10879163]\n",
+      " [0.68089442 0.9462761 ]\n",
+      " [1.47476697 0.20127864]\n",
+      " [1.22939193 0.34230192]\n",
+      " [1.39103239 0.17309307]\n",
+      " [1.28744645 0.307141  ]\n",
+      " [0.92860233 0.77853433]\n",
+      " [0.53829786 1.17624834]\n",
+      " [0.8119857  0.80422451]\n",
+      " [0.78961516 0.96117912]\n",
+      " [1.02763426 0.62966464]\n",
+      " [0.76866938 0.65827382]\n",
+      " [1.2615509  0.29834241]\n",
+      " [0.58974728 1.23088244]\n",
+      " [0.92935625 0.59616504]\n",
+      " [1.3927084  0.19493081]\n",
+      " [0.67993488 1.09432288]\n",
+      " [1.37026669 0.27055957]\n",
+      " [0.79014216 0.91441473]\n",
+      " [0.43387584 1.13750124]\n",
+      " [1.131114   0.222962  ]\n",
+      " [0.96449305 0.70480228]\n",
+      " [0.73298464 0.75546124]\n",
+      " [0.55407725 1.26965591]\n",
+      " [0.46000567 1.14313943]\n",
+      " [0.97632706 0.83087865]\n",
+      " [0.51245251 1.15373942]\n",
+      " [1.30687163 0.26608086]\n",
+      " [0.68855865 0.91950462]\n",
+      " [0.92674073 0.66320739]\n",
+      " [1.3332266  0.21300556]\n",
+      " [0.82447818 0.6647593 ]\n",
+      " [0.88973292 0.64865188]\n",
+      " [0.89485119 0.64780903]\n",
+      " [0.72204491 1.05229069]\n",
+      " [0.60564545 1.01805733]\n",
+      " [1.42043364 0.0999844 ]\n",
+      " [1.24109811 0.1399273 ]\n",
+      " [0.5273099  0.99837134]\n",
+      " [0.78590868 0.64164255]\n",
+      " [0.91895743 0.759547  ]\n",
+      " [0.77025426 0.78357298]\n",
+      " [0.76961967 0.69401709]\n",
+      " [1.35853931 0.37199485]\n",
+      " [1.17471356 0.25911948]\n",
+      " [0.64501926 1.11535579]\n",
+      " [1.39526616 0.18478632]\n",
+      " [0.50817823 1.06358569]\n",
+      " [0.7418448  0.65205149]\n",
+      " [0.71357649 0.7705206 ]\n",
+      " [0.90899466 0.72790243]\n",
+      " [0.74291222 0.89874608]]\n",
+      "[[7.41686766 1.440659   7.35866218]\n",
+      " [0.         8.92474785 1.06413591]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kazuyaaoki/.pyenv/versions/3.10.3/lib/python3.10/site-packages/sklearn/decomposition/_nmf.py:289: FutureWarning: The 'init' value, when 'init=None' and n_components is less than n_samples and n_features, will be changed from 'nndsvd' to 'nndsvda' in 1.1 (renaming of 0.26).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import NMF\n",
+    "from sklearn.datasets import make_blobs\n",
+    "\n",
+    "centers = [[5,10,5], [10,4,10], [6,8,8]]\n",
+    "\n",
+    "V, _ = make_blobs(centers = centers)\n",
+    "\n",
+    "n_components = 2\n",
+    "model = NMF(n_components = n_components)\n",
+    "\n",
+    "model.fit(V)\n",
+    "\n",
+    "W = model.transform(V) \n",
+    "H = model.components_\n",
+    "    \n",
+    "print(W)\n",
+    "print(H)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2a195193",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.00000004e-02 3.16555475e+01 5.00000002e-02 ... 8.86845649e+01\n",
+      "  9.10049093e+00 6.81561947e+01]\n",
+      " [2.90953306e+00 5.00000005e-02 3.60023687e+00 ... 5.06589239e+00\n",
+      "  5.00000014e-02 6.68043512e+00]\n",
+      " [6.86087208e-02 2.62479022e+00 5.00000002e-02 ... 6.51193402e+01\n",
+      "  5.18000269e-02 5.00000181e-02]\n",
+      " ...\n",
+      " [5.00000001e-02 1.18644130e+00 5.00000001e-02 ... 2.63999169e+02\n",
+      "  5.00000005e-02 1.17203064e+02]\n",
+      " [1.71753514e+00 5.00000003e-02 5.00000013e-02 ... 3.42612168e+00\n",
+      "  5.00000001e-02 5.00000006e-02]\n",
+      " [5.00000006e-02 5.00000006e-02 3.76560476e+00 ... 5.00000004e-02\n",
+      "  5.00000001e-02 5.00000003e-02]]\n",
+      "[[0.00208333 0.00208333 0.00208333 ... 0.00208333 0.00208333 0.00208333]\n",
+      " [0.0025     0.0025     0.0025     ... 0.0025     0.0025     0.0025    ]\n",
+      " [0.00060241 0.00060241 0.3399354  ... 0.08391117 0.00060241 0.00060241]\n",
+      " ...\n",
+      " [0.00454545 0.00454545 0.00454545 ... 0.00454545 0.00454545 0.00454545]\n",
+      " [0.00294118 0.00294118 0.00294118 ... 0.25845738 0.00294118 0.12178461]\n",
+      " [0.00357143 0.00357143 0.29402336 ... 0.00357143 0.00357143 0.00357143]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.decomposition import LatentDirichletAllocation\n",
+    "\n",
+    "data = fetch_20newsgroups(remove=('headers', 'footers', 'quotes'))\n",
+    "\n",
+    "max_features = 1000\n",
+    "tf_vectorizer = CountVectorizer(max_features=max_features, stop_words= 'english')\n",
+    "\n",
+    "tf = tf_vectorizer.fit_transform(data.data)\n",
+    "\n",
+    "n_topics = 20\n",
+    "model = LatentDirichletAllocation(n_components=n_topics)\n",
+    "model.fit(tf)\n",
+    "\n",
+    "print(model.components_)\n",
+    "print(model.transform(tf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a839d6c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 0 2 0 2 0 2\n",
+      " 2 2 2 0 2 2 2 2 2 0 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0]\n",
+      "[[6.54639415 2.94946365 5.48364578 1.98726565]\n",
+      " [5.006      3.428      1.462      0.246     ]\n",
+      " [5.9170732  2.77804839 4.20540364 1.29848217]]\n",
+      "[[[0.38744093 0.09223276 0.30244302 0.06087397]\n",
+      "  [0.09223276 0.11040914 0.08385112 0.05574334]\n",
+      "  [0.30244302 0.08385112 0.32589574 0.07276776]\n",
+      "  [0.06087397 0.05574334 0.07276776 0.08484505]]\n",
+      "\n",
+      " [[0.121765   0.097232   0.016028   0.010124  ]\n",
+      "  [0.097232   0.140817   0.011464   0.009112  ]\n",
+      "  [0.016028   0.011464   0.029557   0.005948  ]\n",
+      "  [0.010124   0.009112   0.005948   0.010885  ]]\n",
+      "\n",
+      " [[0.2755171  0.09662295 0.18547072 0.05478901]\n",
+      "  [0.09662295 0.09255152 0.09103431 0.04299899]\n",
+      "  [0.18547072 0.09103431 0.20235849 0.06171383]\n",
+      "  [0.05478901 0.04299899 0.06171383 0.03233775]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "\n",
+    "data = load_iris()\n",
+    "\n",
+    "n_components = 3\n",
+    "model = GaussianMixture(n_components = n_components)\n",
+    "model.fit(data.data)\n",
+    "print(model.predict(data.data))\n",
+    "print(model.means_)\n",
+    "print(model.covariances_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "31b99130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.01574776 -0.01606976]\n",
+      " [ 0.01538539 -0.00744862]\n",
+      " [-0.03680319  0.01499188]\n",
+      " ...\n",
+      " [ 0.045258   -0.01589379]\n",
+      " [-0.02242585  0.0049879 ]\n",
+      " [-0.01363483  0.04629904]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import make_swiss_roll\n",
+    "from sklearn.manifold import LocallyLinearEmbedding\n",
+    "\n",
+    "data, color = make_swiss_roll(n_samples = 1500)\n",
+    "\n",
+    "n_neighbors = 12\n",
+    "n_components = 2\n",
+    "model = LocallyLinearEmbedding(n_neighbors=n_neighbors, n_components=n_components)\n",
+    "\n",
+    "model.fit(data)\n",
+    "print(model.transform(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "88d1af70",
+   "id": "21648470",
    "metadata": {},
    "outputs": [],
    "source": []
